kubernetes/echo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: echo
  namespace: web-test
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: echo-app
